--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,10 @@ version: 2
 updates:
   - package-ecosystem: "npm"
     directory: "/"
+    open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
+      day: "tuesday"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
