--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "vue": "^3.0.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
+    "@vitejs/plugin-vue": "^1.2.1",
     "@vue/compiler-sfc": "^3.0.11",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.23.0",
-    "eslint-plugin-vue": "^7.7.0",
-    "vue-template-compiler": "^2.6.12"
+    "eslint": "^7.24.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "vite": "^2.1.5",
+    "vite-plugin-html": "^2.0.6"
   },
   "eslintConfig": {
     "root": true,
@@ -41,8 +41,6 @@
     }
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "> 2%"
   ]
 }
