--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "env": {
         "browser": true,
         "es6": true,
@@ -18,7 +19,7 @@
     },
     "plugins": [
         "vue"
-    ],
+     ],
     "rules": {
         "no-console": "off"
     },
