--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vue-rss-espn",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
